update padding examples

--- a/src/pages/docs/padding.mdx
+++ b/src/pages/docs/padding.mdx
@@ -21,97 +21,84 @@ Control the padding on one side of an element using the `p{t|r|b|l}-{size}` util
 
 For example, `pt-6` would add `1.5rem` of padding to the top of an element, `pr-4` would add `1rem` of padding to the right of an element, `pb-8` would add `2rem` of padding to the bottom of an element, and `pl-2` would add `0.5rem` of padding to the left of an element.
 
-```html
+```html rose
 <template preview>
-  <div class="flex justify-around items-start">
-    <div>
-      <p class="text-center text-sm text-gray-600 mb-1">pt-8</p>
-      <div class="flex pt-8 bg-gray-400">
-        <span class="bg-yellow-200">Target</span>
+  <div class="flex flex-wrap items-start justify-center text-white font-mono -mx-5">
+    <div class="mx-5 bg-rose-500 stripes stripes-white rounded-md overflow-hidden pt-6">
+      <div class="bg-rose-500 flex items-center justify-center py-3 px-4">
+        pt-6
       </div>
     </div>
-    <div>
-      <p class="text-center text-sm text-gray-600 mb-1">pr-8</p>
-      <div class="flex pr-8 bg-gray-400">
-        <span class="bg-yellow-200">Target</span>
+    <div class="mx-5 bg-rose-500 stripes stripes-white rounded-md overflow-hidden pr-4 mt-6">
+      <div class="bg-rose-500 flex items-center justify-center py-3 px-4">
+        pr-4
       </div>
     </div>
-    <div>
-      <p class="text-center text-sm text-gray-600 mb-1">pb-8</p>
-      <div class="flex pb-8 bg-gray-400">
-        <span class="bg-yellow-200">Target</span>
+    <div class="mx-5 bg-rose-500 stripes stripes-white rounded-md overflow-hidden pb-8 mt-6">
+      <div class="bg-rose-500 flex items-center justify-center py-3 px-4">
+        pb-8
       </div>
     </div>
-    <div>
-      <p class="text-center text-sm text-gray-600 mb-1">pl-8</p>
-      <div class="flex pl-8 bg-gray-400">
-        <span class="bg-yellow-200">Target</span>
+    <div class="mx-5 bg-rose-500 stripes stripes-white rounded-md overflow-hidden pl-2 mt-6">
+      <div class="bg-rose-500 flex items-center justify-center py-3 px-4">
+        pl-2
       </div>
     </div>
   </div>
 </template>
 
-<div class="pt-8"><span class="bg-yellow-200">Target</span></div>
-<div class="pr-8"><span class="bg-yellow-200">Target</span></div>
-<div class="pb-8"><span class="bg-yellow-200">Target</span></div>
-<div class="pl-8"><span class="bg-yellow-200">Target</span></div>
+<div class="[pt-6] ...">pt-6</div>
+<div class="[pr-4] ...">pr-4</div>
+<div class="[pb-8] ...">pb-8</div>
+<div class="[pl-2] ...">pl-2</div>
 ```
 
 ## Add horizontal padding
 
 Control the horizontal padding of an element using the `px-{size}` utilities.
 
-```html
+```html emerald
 <template preview>
-  <div class="flex justify-around items-center">
-    <div>
-      <p class="text-center text-sm text-gray-600 mb-1">px-8</p>
-      <div class="flex px-8 bg-gray-400">
-        <span class="bg-yellow-200">Target</span>
-      </div>
+  <div class="flex justify-center text-white font-mono">
+    <div class="bg-emerald-500 stripes stripes-white rounded-md overflow-hidden px-8">
+      <div class="bg-emerald-500 py-3 px-4">px-8</div>
     </div>
   </div>
 </template>
 
-<div class="px-8"><span class="bg-yellow-200">Target</span></div>
+<div class="[px-8] ...">px-8</div>
 ```
 
 ## Add vertical padding
 
 Control the vertical padding of an element using the `py-{size}` utilities.
 
-```html
+```html indigo
 <template preview>
-  <div class="flex justify-around items-center">
-    <div>
-      <p class="text-center text-sm text-gray-600 mb-1">py-8</p>
-      <div class="flex py-8 bg-gray-400">
-        <span class="bg-yellow-200">Target</span>
-      </div>
+  <div class="flex justify-center text-white font-mono">
+    <div class="bg-indigo-500 stripes stripes-white rounded-md overflow-hidden py-8">
+      <div class="bg-indigo-500 py-3 px-4">py-8</div>
     </div>
   </div>
 </template>
 
-<div class="py-8"><span class="bg-yellow-200">Target</span></div>
+<div class="[py-8] ...">py-8</div>
 ```
 
 ## Add padding to all sides
 
 Control the padding on all sides of an element using the `p-{size}` utilities.
 
-```html
+```html fuchsia
 <template preview>
-  <div class="flex justify-around items-center">
-    <div>
-      <p class="text-center text-sm text-gray-600 mb-1">p-8</p>
-      <div class="flex p-8 bg-gray-400">
-        <span class="bg-yellow-200">Target</span>
-      </div>
+  <div class="flex justify-center text-white font-mono">
+    <div class="bg-fuchsia-500 stripes stripes-white rounded-md overflow-hidden p-8">
+      <div class="bg-fuchsia-500 py-3 px-4">p-8</div>
     </div>
   </div>
 </template>
 
-<div class="p-8"><span class="bg-yellow-200">Target</span></div>
+<div class="[p-8] ...">p-8</div>
 ```
 
 ---
