stripes -> bg-stripes

--- a/src/pages/docs/padding.mdx
+++ b/src/pages/docs/padding.mdx
@@ -24,22 +24,22 @@ For example, `pt-6` would add `1.5rem` of padding to the top of an element, `pr-
 ```html rose
 <template preview>
   <div class="flex flex-wrap items-start justify-center text-white font-mono -mx-5">
-    <div class="mx-5 bg-rose-500 stripes stripes-white rounded-md overflow-hidden pt-6">
+    <div class="mx-5 bg-rose-500 bg-stripes bg-stripes-white rounded-md overflow-hidden pt-6">
       <div class="bg-rose-500 flex items-center justify-center py-3 px-4">
         pt-6
       </div>
     </div>
-    <div class="mx-5 bg-rose-500 stripes stripes-white rounded-md overflow-hidden pr-4 mt-6">
+    <div class="mx-5 bg-rose-500 bg-stripes bg-stripes-white rounded-md overflow-hidden pr-4 mt-6">
       <div class="bg-rose-500 flex items-center justify-center py-3 px-4">
         pr-4
       </div>
     </div>
-    <div class="mx-5 bg-rose-500 stripes stripes-white rounded-md overflow-hidden pb-8 mt-6">
+    <div class="mx-5 bg-rose-500 bg-stripes bg-stripes-white rounded-md overflow-hidden pb-8 mt-6">
       <div class="bg-rose-500 flex items-center justify-center py-3 px-4">
         pb-8
       </div>
     </div>
-    <div class="mx-5 bg-rose-500 stripes stripes-white rounded-md overflow-hidden pl-2 mt-6">
+    <div class="mx-5 bg-rose-500 bg-stripes bg-stripes-white rounded-md overflow-hidden pl-2 mt-6">
       <div class="bg-rose-500 flex items-center justify-center py-3 px-4">
         pl-2
       </div>
@@ -60,7 +60,7 @@ Control the horizontal padding of an element using the `px-{size}` utilities.
 ```html emerald
 <template preview>
   <div class="flex justify-center text-white font-mono">
-    <div class="bg-emerald-500 stripes stripes-white rounded-md overflow-hidden px-8">
+    <div class="bg-emerald-500 bg-stripes bg-stripes-white rounded-md overflow-hidden px-8">
       <div class="bg-emerald-500 py-3 px-4">px-8</div>
     </div>
   </div>
@@ -76,7 +76,7 @@ Control the vertical padding of an element using the `py-{size}` utilities.
 ```html indigo
 <template preview>
   <div class="flex justify-center text-white font-mono">
-    <div class="bg-indigo-500 stripes stripes-white rounded-md overflow-hidden py-8">
+    <div class="bg-indigo-500 bg-stripes bg-stripes-white rounded-md overflow-hidden py-8">
       <div class="bg-indigo-500 py-3 px-4">py-8</div>
     </div>
   </div>
@@ -92,7 +92,7 @@ Control the padding on all sides of an element using the `p-{size}` utilities.
 ```html fuchsia
 <template preview>
   <div class="flex justify-center text-white font-mono">
-    <div class="bg-fuchsia-500 stripes stripes-white rounded-md overflow-hidden p-8">
+    <div class="bg-fuchsia-500 bg-stripes bg-stripes-white rounded-md overflow-hidden p-8">
       <div class="bg-fuchsia-500 py-3 px-4">p-8</div>
     </div>
   </div>
