--- a/src/pages/docs/configuring-variants.mdx
+++ b/src/pages/docs/configuring-variants.mdx
@@ -337,7 +337,7 @@ module.exports  = {
 }
 ```
 
-Note that enabling a lot of variants for all plugins will result in much bigger file sizes. Before you do this, be sure to read our guide on [Controlling File Size](/docs/controlling-file-size/).
+Note that enabling a lot of variants for all plugins will result in much bigger file sizes. Before you do this, be sure to read our guide on [Optimizing for Production](/docs/optimizing-for-production/).
 
 ---
 
