--- a/src/pages/docs/extracting-components.mdx
+++ b/src/pages/docs/extracting-components.mdx
@@ -175,7 +175,7 @@ To avoid unintended specificity issues, we recommend wrapping your custom compon
 
 Tailwind will automatically move those styles to the same place as `@tailwind components`, so you don't have to worry about getting the order right in your source files.
 
-Using the `@layer` directive will also instruct Tailwind to consider those styles for purging when purging the `components` layer. Read our [Controlling File Size](/docs/controlling-file-size) documentation for more details.
+Using the `@layer` directive will also instruct Tailwind to consider those styles for purging when purging the `components` layer. Read our [Optimizing for Production](/docs/optimizing-for-production) documentation for more details.
 
 ### Keeping things composable
 
