--- a/src/pages/docs/functions-and-directives.mdx
+++ b/src/pages/docs/functions-and-directives.mdx
@@ -188,7 +188,7 @@ Use the `@layer` directive to tell Tailwind which "bucket" a set of custom style
 
 Tailwind will automatically move any CSS within a `@layer` directive to the same place as the corresponding `@tailwind` rule, so you don't have to worry as much about authoring your CSS in a specific order to avoid specificity issues.
 
-Wrapping any custom CSS in a `@layer` directive also tells Tailwind to consider those styles for purging when purging that layer. Read our [Controlling File Size](/docs/controlling-file-size) documentation for more details.
+Wrapping any custom CSS in a `@layer` directive also tells Tailwind to consider those styles for purging when purging that layer. Read our [Optimizing for Production](/docs/optimizing-for-production) documentation for more details.
 
 ---
 
