--- a/src/pages/docs/adding-new-utilities.mdx
+++ b/src/pages/docs/adding-new-utilities.mdx
@@ -35,7 +35,7 @@ The easiest way to add your own utilities to Tailwind is to simply add them to y
 
 By using the `@layer` directive, Tailwind will automatically move those styles to the same place as `@tailwind utilities` to avoid unintended specificity issues.
 
-Using the `@layer` directive will also instruct Tailwind to consider those styles for purging when purging the `utilities` layer. Read our [Controlling File Size](/docs/controlling-file-size) documentation for more details.
+Using the `@layer` directive will also instruct Tailwind to consider those styles for purging when purging the `utilities` layer. Read our [Optimizing for Production](/docs/optimizing-for-production) documentation for more details.
 
 ### Generating responsive variants
 
