Update browser support documentation

--- a/src/pages/docs/upgrading-to-v2.mdx
+++ b/src/pages/docs/upgrading-to-v2.mdx
@@ -1,10 +1,7 @@
 ---
-title: "Upgrading to v2.0"
-description: "Tailwind CSS brand assets and usage guidelines."
+title: "Upgrade Guide"
+description: "Upgrading from Tailwind CSS v1.x to v2.0."
 ---
-
-export const Layout = require('@/layouts/ContentsLayout').ContentsLayoutOuter
-export default require('@/layouts/BasicLayout').BasicLayout
 
 Tailwind CSS v2.0 is the first new major version since v1.0 was released in May 2019, and as such it includes a handful of small breaking changes.
 
