--- a/src/pages/docs/browser-support.mdx
+++ b/src/pages/docs/browser-support.mdx
@@ -1,47 +1,19 @@
 ---
 title: Browser Support
-description: Understanding how to think about browser support with a utility-first framework.
+description: Understanding which browsers Tailwind supports and how to manage vendor prefixes.
 ---
 
-Tailwind includes support for a lot of CSS features that are only available in modern evergreen browsers, such as [grid layout](/docs/grid-template-columns), [object-fit](/docs/object-fit)/[position](/docs/object-position), and [sticky positioning](/docs/position/#sticky), and uses other modern CSS features like custom properties to implement utilities like [translate](/docs/translate), [rotate](/docs/rotate), and [scale](/docs/scale).
+As of v2.0, Tailwind CSS is designed for and tested on the latest stable versions of Chrome, Firefox, Edge, and Safari. Tailwind CSS v2.0 does not support any version of IE, including IE 11.
 
-That said, because Tailwind is such a low-level framework you can still easily use it to build sites that need to support older browsers like IE10/11.
+If you need to support IE 11, we recommend using Tailwind CSS v1.9, which is still an excellent and very productive framework.
 
-## Using Tailwind with older browsers
-
-In popular component-based frameworks like Bootstrap or Bulma, it's important to know what browsers are supported because the implementation details for each component are abstracted away from you.
-
-For example, when you are building a grid with classes like `.row` or `.col-4`, you need to know which browsers the framework author is targeting because you have no idea if those classes are implemented using floats, Flexbox, or CSS Grid.
-
-Tailwind on the other hand is a low-level utility framework, where most of the classes map directly to individual CSS properties. This means that **which browsers you support is really up to you, not the framework**.
-
-For example, here is a three column grid built with Tailwind's Flexbox utilities, so it will only work in IE10+ since Flexbox isn't supported in IE9:
-
-```html
-<div class="flex">
-  <div class="w-1/3"><!-- ... --></div>
-  <div class="w-1/3"><!-- ... --></div>
-  <div class="w-1/3"><!-- ... --></div>
-</div>
-```
-
-If you needed to support IE9, you could build your grids with floats instead, since they are supported in virtually all browsers:
-
-```html
-<div class="clearfix">
-  <div class="float-left w-1/3"><!-- ... --></div>
-  <div class="float-left w-1/3"><!-- ... --></div>
-  <div class="float-left w-1/3"><!-- ... --></div>
-</div>
-```
-
-Because Tailwind doesn't impose any opinions about *how* you build the components in your UI, you can implement them however you like according to your own browser support policy.
-
-For the latest information about which CSS features are supported by which browsers, search the excellent [Can I Use](https://caniuse.com/) database.
+Certain features such as `focus-visible` are included but not supported natively by all modern browsers. We've included information about recommended polyfills for those features directly alongside the documentation for the features themselves.
 
 ## Vendor Prefixes
 
-Tailwind doesn't automatically add vendor prefixes to any of its styles. Instead, we recommend that you use [Autoprefixer](https://github.com/postcss/autoprefixer).
+If you're compiling your CSS using the `tailwindcss` CLI tool, vendor prefixes will be added automatically.
+
+If not, we recommend that you use [Autoprefixer](https://github.com/postcss/autoprefixer).
 
 To use it, install it via npm:
 
