--- a/src/pages/docs/grid-row.mdx
+++ b/src/pages/docs/grid-row.mdx
@@ -49,9 +49,9 @@ Note that CSS grid lines start at 1, not 0, so a full-height element in a 3-row 
 </template>
 
 <div class="grid grid-rows-3 grid-flow-col gap-4">
-  <div class="**row-start-2** row-span-2 ..."></div>
-  <div class="**row-end-3** row-span-2 ..."></div>
-  <div class="**row-start-1** row-end-4 ..."></div>
+  <div class="**row-start-2** row-span-2 ...">1</div>
+  <div class="**row-end-3** row-span-2 ...">2</div>
+  <div class="**row-start-1** row-end-4 ...">3</div>
 </div>
 ```
 
