corrections to color highlight + responsive code snippets for grid examples

--- a/src/pages/docs/grid-column.mdx
+++ b/src/pages/docs/grid-column.mdx
@@ -48,13 +48,13 @@ Use the `col-start-{n}` and `col-end-{n}` utilities to make an element start or 
 
 Note that CSS grid lines start at 1, not 0, so a full-width element in a 6-column grid would start at line 1 and end at line 7.
 
-```html amber
+```html lightBlue
 <template preview class="bg-white p-8">
   <div class="grid grid-cols-6 gap-4">
-    <div class="col-start-2 col-span-4 bg-amber-500 h-12 rounded-md flex items-center justify-center text-white text-2xl font-extrabold">1</div>
-    <div class="col-start-1 col-end-3 bg-amber-500 h-12 rounded-md flex items-center justify-center text-white text-2xl font-extrabold">2</div>
-    <div class="col-end-7 col-span-2 bg-amber-500 h-12 rounded-md flex items-center justify-center text-white text-2xl font-extrabold">3</div>
-    <div class="col-start-1 col-end-7 bg-amber-500 h-12 rounded-md flex items-center justify-center text-white text-2xl font-extrabold">4</div>
+    <div class="col-start-2 col-span-4 bg-light-blue-500 h-12 rounded-md flex items-center justify-center text-white text-2xl font-extrabold">1</div>
+    <div class="col-start-1 col-end-3 bg-light-blue-500 h-12 rounded-md flex items-center justify-center text-white text-2xl font-extrabold">2</div>
+    <div class="col-end-7 col-span-2 bg-light-blue-500 h-12 rounded-md flex items-center justify-center text-white text-2xl font-extrabold">3</div>
+    <div class="col-start-1 col-end-7 bg-light-blue-500 h-12 rounded-md flex items-center justify-center text-white text-2xl font-extrabold">4</div>
   </div>
 </template>
 
